2009-06-22  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#120267

	* src/mb/hd-wm.c (hd_wm_client_activate):
	  Junk to avoid a warning.

2009-06-22  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 2.2.55

2009-06-21  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	NB#115408 Cannot snooze/stop an alarm playing over 'Switch off
	device?' confirmation note

	* src/mb/hd-note.c: Certain kinds of notes are put into the front
	group by hd_comp_mgr_map_notify().  It is possible (by manipulating
	a window's Hildon layer) to put a note below another window in the
	X stacking order, whereupon it will be shown on top anyway because
	it's in the front group.  So for these kinds of notes, stack them
	on top in the X stacking order as well.

2009-06-19  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#122091 - Wrong color in layout mode when moving widgets from
	one desktop to another

	* src/home/hd-home.c (hd_home_constructed, hd_home_remove_dialogs,
	  hd_home_theme_changed): 
	* src/home/hd-home.h: Add hd_home_theme_changed method to update edge
	color.

	* src/mb/hd-theme.c (hd_theme_init): Call hd_home_theme_changed when
	the theme is changed.

	* debian/changelog: update.

2009-06-19  Gordon Williams <gordon.williams@collabora.co.uk>

	Fixes: NB#120171 - Part of all contacts view is shown in background of
	                   switcher view in a mentioned scenario.

	* src/util/hd-transition.c
	* src/util/hd-transition.h: Added hd_transition_stop to stop subview
	  transitions immediately and place windows correctly at their 
	  endpoints.
	* src/home/hd-render-manager.c: Call hd_transition_stop on active 
	  client before entering the task nav. The task nav doesn't handle
	  subview sliding properly (It only grabs the frontmost win, and also
	  it doesn't clip now for performance reasons). 

2009-06-19  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/util/hd-util.c
	* src/mb/hd-atoms.c